--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PasteIt</title>
-    <!-- <link rel="stylesheet" href="popup.css"> -->
+    <link rel="stylesheet" href="popup.css">
 </head>
 <body>
     <h2>Clipboard</h2>
     <div id="clipboard-list"></div>
-    <button id="clearClipboard">Clear Clipboard</button>
-    <script src="popup.js"></script>
+    <button id="clearClipboard">🗑️ Clear Clipboard</button>
+    <button id="muteToggle">🔊 Sound: ON</button> <!-- ✅ New Mute Button -->
+        <script src="popup.js"></script>
 </body>
 </html>
