added dragging and resiing ability

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -12,5 +12,7 @@
     <button id="clearClipboard">🗑️ Clear Clipboard</button>
     <button id="muteToggle">🔊 Sound: ON</button> <!-- ✅ New Mute Button -->
         <script src="popup.js"></script>
+    <label for="popupToggle">Enable Clipboard Popup</label>
+    <input type="checkbox" id="popupToggle" checked>
 </body>
 </html>
